--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.data.mongodb.host=localhost
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=BookStore
+spring.data.mongodb.username=root
+spring.data.mongodb.password=root
+spring.data.mongodb.database=bookdb
